--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <p>Hello, my name is <b>Vadim Tsyushko</b></p>
         My GitHub repository
         <a href="https://github.com/vadimtyushko/first" target="_blank">click here</a>
-
+        <br/>
+        <img src ="source/1.jpg" alt="my avatar">
     </body>
 </html>
